syntax = "proto3";
package mith.v1;

option java_multiple_files = true;
option java_package = "dev.luckynetwork.cyclize.mith.rpc";
option java_outer_classname = "AuthProto";

enum ERROR {
    ERROR_UNSPECIFIED = 0;
    ERROR_NOT_FOUND = 1;
    ERROR_ALREADY_EXISTS = 2;
    ERROR_USING_VPN = 3;
    ERROR_INVALID_PASSWORD = 4;
    ERROR_INVALID_USERNAME = 5;
    ERROR_ACCOUNT_LOCKED = 6;
}

enum CONTROL {
    CONTROL_UNSPECIFIED = 0;
    CONTROL_WHITELIST = 1;
    CONTROL_LOCK = 2;
    CONTROL_UNLOCK = 3;
    CONTROL_FLUSH = 4;
}

service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse) {}
    rpc Register (RegisterRequest) returns (RegisterResponse) {}
    rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse) {}
    rpc Acknowledge (AcknowledgeRequest) returns (AcknowledgeResponse) {}
    rpc Retrieve (RetrieveRequest) returns (RetrieveResponse) {}
    rpc Control (ControlRequest) returns (ControlResponse) {}
}

message LoginRequest {
    string uuid = 1;
    string password = 2;
    string ip = 3;
}

message LoginResponse {
    bool success = 1;
    ERROR error = 2;
}

message RegisterRequest {
    string uuid = 1;
    string username = 2;
    string password = 3;
    string ip = 4;
}

message RegisterResponse {
    bool success = 1;
    ERROR error = 2;
    string security_code = 3;
}

message ChangePasswordRequest {
    string uuid = 1;
    string old_password = 2;
    string new_password = 3;
    string ip = 4;
}

message ChangePasswordResponse {
    bool success = 1;
    ERROR error = 2;
}

message AcknowledgeRequest {
    string uuid = 1;
}

message AcknowledgeResponse {
    bool success = 1;
    ERROR error = 2;
}

message RetrieveRequest {
    string uuid = 1;
    string username = 2;
}

message RetrieveResponse {
    bool success = 1;
    bool premium = 2;
    ERROR error = 3;
}

message ControlRequest {
    CONTROL type = 1;
    string username = 2;
}

message ControlResponse {
    bool success = 1;
    ERROR error = 2;
}
